# treefs

./: README.md  pyproject.toml  setup.py  tree2fs.sh  treefs.py
.github/workflows/: build-release.yml
internal/rc/: rc.go
internal/sudoers/: sudoers.go
internal/util/: file.go
tests/: integration_test.go  rc_test.go
treefs.egg-info/: PKG-INFO  SOURCES.txt
